package protobuf;

message ComputeRequest{
	optional int32 input = 1;
	optional InputConfig inputConfig = 2;
	optional OutputConfig = outputConfig = 3;
	optional string delimiter = 4;
}

message ComputeResponse{
	optional WriteResult status = 1;
}

message InputConfig{
	optional int32 = 1;
}

message OutputConfig{
	optional string = 1;
} 

service DataStoreService{
	rpc appendSingleResult(WriteOutputRequest) returns (WriteResult);
    rpc read(ReadInputFileRequest) returns (userInteger);
}

service ComputationCoordinatorService{
	rpc compute(Request) returns (WriteResult);
}